Add fat to the title

--- a/text.html
+++ b/text.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My favorite cartoon character</title>
+    <title>My favorite fat cartoon character</title>
 </head>
 <body>
     <h1>Disney has been releasing cartoos since 19s.</h1>
