--- a/text.html
+++ b/text.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My favorite fat cartoon character</title>
+    <title>My favorite cartoon character</title>
 </head>
 <body>
-    <h1>Disney has been releasing cartoos since 19s.</h1>
+    <h1>Disney has leelo been releasing cartoos since 19s.</h1>
     <p>Among all of them, I really like Mickey from Mickey Mouse,<br>
         <i>Disney classic cartoon serie.</i>
     </p>
