--- a/text.html
+++ b/text.html
@@ -12,5 +12,6 @@
         For more further information.
     </a>
     <img src="mickey.jpg">
+    <p>The point is Disney characters are super cool.</p>
 </body>
 </html>
