--- a/text.html
+++ b/text.html
@@ -7,11 +7,12 @@
     <h1>Disney has leelo been releasing cartoos since 19s.</h1>
     <p>Among all of them, I really like Mickey from Mickey Mouse,<br>
         <i>Disney classic cartoon serie.</i>
+        The point is Disney characters are super cool.
     </p>
     <a href="https://en.wikipedia.org/wiki/Mickey_Mouse" target="_blank" title="This may lead you to another website.">
         For more further information.
     </a>
     <img src="mickey.jpg">
-    <p>The point is Disney characters are super cool.</p>
+    
 </body>
 </html>
