--- a/first.html
+++ b/first.html
@@ -6,7 +6,7 @@
 <body>
     <h1>Disney has leelo been releasing cartoos since 19s.</h1>
     <p>Among all of them, I really like Mickey from Mickey Mouse,<br>
-        <i>Disney classic cartoon serie.</i>
+        <i>Disney classic cartoon serie.</i><br>
         The point is Disney characters are super cool.
     </p>
     <a href="https://en.wikipedia.org/wiki/Mickey_Mouse" target="_blank" title="This may lead you to another website.">
