--- a/myfirstweb.html
+++ b/myfirstweb.html
@@ -4,7 +4,7 @@
     <title>My favorite cartoon character</title>
 </head>
 <body>
-    <h1>Disney has leelo been releasing cartoos since 19s.</h1>
+    <h1>Disney has been releasing cartoos since 19s.</h1>
     <p>Among all of them, I really like Mickey from Mickey Mouse,<br>
         <i>Disney classic cartoon serie.</i><br>
         The point is Disney characters are super cool.<br>
