--- a/myfirstweb.html
+++ b/myfirstweb.html
@@ -8,7 +8,8 @@
     <p>Among all of them, I really like Mickey from Mickey Mouse,<br>
         <i>Disney classic cartoon serie.</i><br>
         The point is Disney characters are super cool.<br>
-        And I really love them.
+        And I really love them.<br>
+        I am a website newbie.
     </p>
     <a href="https://en.wikipedia.org/wiki/Mickey_Mouse" target="_blank" title="This may lead you to another website.">
         For more further information.
