--- a/myfirstweb.html
+++ b/myfirstweb.html
@@ -9,7 +9,7 @@
         <i>Disney classic cartoon serie.</i><br>
         The point is Disney characters are super cool.<br>
         And I really love them.<br>
-        I am a website newbie.
+        I am a website newbie and I love VSC.
     </p>
     <a href="https://en.wikipedia.org/wiki/Mickey_Mouse" target="_blank" title="This may lead you to another website.">
         For more further information.
