--- a/myfirstweb.html
+++ b/myfirstweb.html
@@ -2,11 +2,18 @@
 <html>
 <head>
     <title>My favorite cartoon character</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Disney has been releasing cartoos since 19s.</h1>
+    <span>Hello World.</span>
+    <h1 class="big"> <span>Disney has been releasing cartoos since 19s.</span></h1>
+    <h1 class="small">And I have been watching since I was 8.</h1>
+    <h1 class="middle">I don't remember when I started to like them.</h1>
+    <h2 class="upper">I am feeling complicated right now.</h2>
+    <h2 class="lower">I don't know and I don't want to.</h2>
+    <h2 class="medium">What should I do?</h2>
     <p>Among all of them, I really like Mickey from Mickey Mouse,<br>
-        <i>Disney classic cartoon serie.</i><br>
+        <span><i>Disney classic cartoon serie.</i></span><br>
         The point is Disney characters are super cool.<br>
         And I really love them.<br>
         I am a website newbie and I love VSC,Adobe XD and Adobe Photoshop.
