First Website to develop

--- a/index.html
+++ b/index.html
@@ -3,25 +3,28 @@
 <head>
    <title>Mickey Mouse</title>
    <link rel="icon" href="MIckeymouse.jpeg">
+   <link rel="stylesheet" href="indexstyle.css">
+   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" 
+   rel="stylesheet">
 </head>
 
 <body>
     <!-- header -->
     <header>
         <img src="MIckeymouse.jpeg" alt="Please refresh">
-        <h1>Mickey Mouse And All You Need To Know About Him</h1>
+        <h1>Mickey Mouse</h1>
     </header>
 
     <!-- main -->
     <main>
-        <h2>Mickey</h2>
+        <h2>MICKEY</h2>
         <p>
             Mickey is a mouse who loves to stay really happy and have lots of friends.   
-            He make us happy through our youth and our days enjoyable watching his shows.
+            He make us happy through our youth and our days enjoyable watching his shows.<br>
             Moreover, it is not wrong to stay that Mickey is our childhood bestfriend.
         </p>
-        <img src="mickeyandfriends.jpeg" alt="Please refresh">
-        <p>Mickey and his friends</p>
+        <center><img src="mickeyandfriends.jpeg" alt="Please refresh" ></center>
+        <p class="caption">Mickey and his friends</p>
         <h2>Mickey's Characteristics</h2>
         <ol>
             <li>He has really big ears.</li>
@@ -36,10 +39,11 @@
             <li><a href="https://en.wikipedia.org/wiki/Goofy" target="_blank">Goofy</a></li>
             <li><a href="https://disney.fandom.com/wiki/Minnie_Mouse" target="_blank">Minnie Mouse A.K.A Mickey's Fiance</a></li>
         </ul>
-        <footer>
-            This website is created by Zinn during his website development.
-            &copy;Zinn
-        </footer>
     </main>
+    <footer>
+        This website is created by Zinn during his website development.<br>
+        You can learn more from <a href="" target="_blank">linmyintmyat2003@gmail.com</a><br>
+        &copy;Zinn
+    </footer>
 </body>
 </html>
